style2.css
@font-face {
    font-family: "shrikhand";
    src: url(font/Shrikhand/Shrikhand-Regular.ttf);


}

body {
    font-family: "roboto", Arial, Helvetica, sans-serif;
    margin: 0;

}

#photo {
    width: 95%;
    height: 200px
}

#photo img {
    width: 100%;
    height: 100%;
    object-fit: cover;

}

.ligne {
    background-color: #99E2D0;
    width: 82px;
    height: 3px;
    margin: 20px 0;
}

#title {
    display: flex;
    gap: 64px;
    align-items: center;

}

h3 {
    margin: 0;
}
#order a {
    display: flex;
    width: 100%;
    height: 100%;
    text-decoration: none;

}

#menu,
#menu1 {
    padding-left: 20px;

}
#menubis
{
    display:flex;
    gap:40px;
}

.descriptionmenu {
    display: flex;
    width: 500px;
    flex-direction: column;

}

.descriptionmenu p {
    margin: 3px 0;
}

h1 {
    font-family: 'shrikhand', Arial, Helvetica, sans-serif;
}

.dish {
    margin: 20px 0;
    display:flex;
    width: 70%;

}

#order {
    background: linear-gradient(#ff79DA, #9356DC);
    margin: 42px;
    display: flex;
    align-items: center;
    border-radius: 20px;
    width: 230px;
    height: 50px;
    border: 0px;
}

#order span {
    margin: auto;
    color: #f2f2f2;
}

footer {
    background-color: #353535;
    height: 100px;
}

footer a {
    text-decoration: none;
    color: #f8f9F9;
}

footer h3 {
    font-family: 'shrikhand', Arial, Helvetica, sans-serif;
    color: #f8f9F9;
    font-size: 20px;
    margin-bottom: 10px;
    padding-left: 10px;
}

#contact {
    display: flex;
    gap: 80px;
    padding-left: 10px;
}

.confirmation {
    background-color: #99E2D0;
    height: auto;
    width: 80px;
    opacity: 0;
    border-radius: 0 15px 15px 0;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 -80px 0 7px;
}


.dish:hover .confirmation {
    animation:slide-left 0.5s both;
    margin-left: 85px;
    opacity: 1;

}
.prix {
    font-weight: 700;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    padding-left: 15px;
    padding-top: 18px;
    font-family: Arial, Helvetica, sans-serif;

}

.circle {
    background-color: #FFFFFF;
    border-radius: 100px;
    width: 25px;
    height: 25px;
    color: #99E2D0;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: transform 1S;
}

.dish:hover .circle {
    transform: rotate(360deg);
}


  @keyframes slide-left {
    0% {
      -webkit-transform: translateX(0px);
              transform: translateX(0px);
    }
    100% {
      -webkit-transform: translateX(-80px);
              transform: translateX(-80px);
    }
  }
  @keyframes heart2 {
    0% {
      opacity: 0;
    }
    50% {
      opacity: 0.5;
      background-image: linear-gradient( #9356DC, #FF79DA);
      -webkit-background-clip: text;
-webkit-text-fill-color: transparent;
    }
    100% {
      opacity: 1;
      background-image: linear-gradient( #9356DC, #FF79DA);
      -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

    }
  }
  @keyframes heart1 {
    0% {
      opacity: 1;
    }
    
    100% {
      opacity: 0;
    }
  }
  .heart {
    position: relative;
  }
  .heart1 {
    position: relative;


  }
  .heart1:hover {

    animation: heart1 0.5s both;
  }
  .heart2 {
    position: absolute;
   top: 0px;
   opacity: 0;
    color: #FFF;
  }
  .heart2:hover {
    
    animation: heart2 0.5s forwards;

}

h2::after {
    content: '';
    display: block;
}

@keyframes scroll {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }

}

#Entrees {
    animation-name: scroll;
    animation-duration: 2s;
}

#Plats {
    animation-name: scroll;
    animation-duration: 6s;
}

#Desserts {
    animation-name: scroll;
    animation-duration: 10s;
}
#order:hover {
    opacity: 0.8;
    box-shadow: 2px 2px 2px;
}

@media all and (max-device-width:1400px) {
    #contact {
        display: flex;
        gap: 25px;
    }
    #menubis 
    {
        display: flex;
        flex-direction: column;
    }
    .confirmation
    {
        opacity: 0;
    }
}


@media all and (max-device-width:768px) {
    #logo {
        width: 50%;
        padding: 15px;
        margin: auto;

    }

    #logo img {
        width: 100%;
        object-fit: cover;
    }

    #fleche {
        position: absolute;
        margin: 20px 12px;
        font-size: 20px;
    }

    #fleche i {
        color: black;
    }

    #photo {
        width: 100%;
        height: 200px;
        margin: auto;
    }

    #photo img {
        width: 100%;
    }

    #title {
        display: flex;
        align-items: center;
        gap: 16px;
        font-size: 15px;
        font-family: 'shrikhand', Arial, Helvetica, sans-serif;
        justify-content: space-between;
    }

    #title i {
        font-size: 23px;
        padding-right: 30px;
    }

    #title h1 {
        margin: 0px;
        padding: 10px;
        font-size: 27px;
    }

    footer {
        background-color: #353535;
        width: 100%;
        height: 180px;
    }

    footer h3,
    footer i,
    footer span {
        color: #f2f2f2;
    }

    footer h3 {
        padding: 0 20px;
        font-family: 'shrikhand', Arial, Helvetica, sans-serif;

    }

    footer ul {
        list-style-type: none;
    }

    #contact {
        display: flex;
        flex-direction: column;
        padding: 0 20Px;
        gap: 10px;
    }

    a {
        text-decoration: none;
    }

    #menu {
        background-color: #f8f9F9;
        border-radius: 30px 30px 0 0;
        margin: -30px auto 0 auto;
        position: relative;
        width: 100%;
        height: 1000px;
        padding: 0;
    }

    #menu1 {
        background-color: #f8f9F9;
        border-radius: 30px 30px 0 0;
        margin: -30px auto 0 auto;
        position: relative;
        width: 100%;
        height: 1070px;
        padding: 0;
    }


    .dish {
        display: flex;
        background-color: #FFFFFF;
        border-radius: 15px;
        width: 95%;
        margin: 15px auto;
        height: 60px;
        overflow: hidden;
        cursor: pointer;
        gap: 10px;

    }



    .descriptionmenu {

        display: flex;
        flex-direction: column;
        width: 80%;
        padding: 5px 0 0 10px;
        justify-content: center;
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }

    .dish h3 {
        font-weight: 900;
        margin: 0px;
    }

    #order {
        background: linear-gradient(#ff79DA, #9356DC);
        margin: 40px auto;
        display: flex;
        align-items: center;
        border-radius: 20px;
        width: 195px;
        height: 40px;
        border: 0px;
    }

    #order:hover {
        opacity: 0.8;
        box-shadow: 2px 2px 2px;
    }

    a span {
        margin: auto;
        color: #f2f2f2;
    }

    h2 {
        padding-left: 10px;
        margin: 5px 0;
        font-size: 18px;
    }

    .ligne {
        background-color: #99E2D0;
        width: 43px;
        height: 3px;
        margin: 0 11px;
    }

    #order a {
        display: flex;
        width: 100%;
        height: 100%;

    }

    h2::after {
        content: '';
        display: block;
    }

    @keyframes scroll {
        0% {
            opacity: 0;
        }

        100% {
            opacity: 1;
        }

    }

    #Entrees {
        animation-name: scroll;
        animation-duration: 2s;
    }

    #Plats {
        animation-name: scroll;
        animation-duration: 6s;
    }

    #Desserts {
        animation-name: scroll;
        animation-duration: 10s;
    }

    .confirmation {
        background-color: #99E2D0;
        height: auto;
        width: 80px;
        opacity: 1;
        border-radius: 0 15px 15px 0;
        display: flex;
        align-items: center;
        justify-content: center;
        margin: 0 -80px 0 7px;
    }
    

    .dish:hover .confirmation {
        animation:slide-left 0.5s both;
        margin-left: 85px;

    }

    .prix {
        font-weight: 700;
        display: flex;
        justify-content: flex-end;
        align-items: flex-end;
        padding-left: 15px;
        padding-top: 18px;
        font-family: Arial, Helvetica, sans-serif;

    }

    .circle {
        background-color: #FFFFFF;
        border-radius: 100px;
        width: 25px;
        height: 25px;
        color: #99E2D0;
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 1S;
    }

    .dish:hover .circle {
        transform: rotate(360deg);
    }
    @keyframes heart2 {
        0% {
          opacity: 0;
        }
        50% {
          opacity: 0.5;
          background-image: linear-gradient( #9356DC, #FF79DA);
          -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
        }
        100% {
          opacity: 1;
          background-image: linear-gradient( #9356DC, #FF79DA);
          -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    
        }
      }
      @keyframes heart1 {
        0% {
          opacity: 1;
        }
        
        100% {
          opacity: 0;
        }
      }
      .heart {
        right: 0px;
        position: absolute;
      }
      .heart1 {
        position: relative;
    

      }
      .heart1:hover {
    
        animation: heart1 0.5s both;
      }
      .heart2 {
        position: absolute;
       top: 0px;
       opacity: 0;
        color: #FFF;
      }
      .heart2:hover {
        
        animation: heart2 0.5s forwards;

}
#menubis{
    display:block;
}

    }

